--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "react-todo",
   "version": "0.1.0",
   "private": true,
+  "author": "Veysel Karani Gencer <vkgencer@gmail.com>",
+  "description": "React.js todo app",
   "dependencies": {
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
